Revision history for Graphics-Primitive

0.27
  - Fill: Make paint a required attribute

0.26
  - Add Image component (experimental)
  - POD fixes
  - Component: make parent a weakref

0.25
  - TextBox: Normalize multi-line rendering on line height

0.24
  - TextBox: Fix broken multi-line rendering

0.23
  - Component: Add parent attribute
  - Container: Set and unset parent attribute on add/remove/clear
  - Add Aligned role
  - Textbox: Use Aligned role
  - POD updates

0.22
  - Properly append component lists in find.

0.21
  - Remove duplicate code in Driver's prepare method

0.20
  - Fix accidentally marking containers as prepared when they are not

0.19
  - Component: Add class attribute
  - ComponentList: Add each and find

0.18
  - Add ComponentList and use it to keep container components.
  - Container: find_component now returns the component's index, not the
    component.

0.17
  - Useless whitespace changes
  - POD typos fixed
  - Border: switch from a single width to per-side Brushes
  - Brush: add derive, equal_to and not_equal_to
  - Border: now cloneable
  - Border: add homogeneous, equal_to and not_equal_to
  - Insets: ad as_array

0.16
  - Opps, I forgot. :(

0.15
  - Add prepared flag to components.  Attributes that affect rendering have
    been modified to set prepared to 0 via a trigger.  Any new attributes
    added henceforth should do the same.
  - Containers (being Components) also have a prepared flag, but it is set
    to true by the layout manager, not by the container itself.  Also, a
    container is not prepared unless all of it's child components are
    prepared.  See Layout::Manager for more details.
  - TextBox: Fix bug when prepared & packed with text attribute set
  - POD


0.14
  - TextBox: handle text layout with Text::Flow
  - Component: coercion of Insets from ArrayRef and Num 
  - Add pop_component to Container for removing the last component.
  - POD updates